--- a/Membuat Web/stylesheet.css
+++ b/Membuat Web/stylesheet.css
@@ -60,36 +60,92 @@ body {
   color: rgb(231, 76, 60);
 }
 .extra1 {
-  background-color: #fbc531;
+  background-color: #34495e;
   height: 500px;
+}
+
+.extra1 p{
+  color: white;
 }
 
 .section-title {
   border-bottom: 2px solid #dee7ec;
   font-size: 28px;
   padding-bottom: 15px;
-  margin-bottom: 50px;
+  margin-bottom: 15px;
   text-align: center;
+  color: white
 }
 
 .member {
   float: left;
+  text-align: center;
   margin-right: 20px;
   padding-left: 40px;
 }
 
 .extra2 {
-  background-color: #4cd137;
-  height:300px;
+  background-color: #34495e;
+  height:600px;
   border-radius: 5px;
-  padding: 20px;
+  padding: 5px;
   text-align: center;
+}
+
+input[type=text], select {
+  width: 800px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 800px;
+  background-color: #5F4890;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #8C6CD1;
+}
+
+textarea {
+  width: 800px;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
 }
 
 .footer {
   background-color: #34495e;
   height: 90px;
   color: white;
+}
+
+.footer span {
+  color: rgb(231, 76, 60);
+}
+
+.footer h1{
+  float: left;
+  font-size: 36px;
+}
+
+.footer h3{
+  float: right;
+  padding-top: 15px;
 }
 
 .header-logo {
